force-app/main/default/objects/Calendar__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Code__c</fullName>
        <description>Field created to get the details from callista</description>
        <externalId>true</externalId>
        <label>Calendar Code</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Calendar_Name_Alternate__c</fullName>
        <label>Calendar Name Alternate</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Calendar Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADMISSION</fullName>
                </value>
                <value>
                    <fullName>TEACHING</fullName>
                </value>
                <value>
                    <fullName>ASSESSMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date_End_Calc__c</fullName>
        <description>Retrieves Course Start Date to calculate the Course End Date</description>
        <inlineHelpText>Retrieves Course Start Date to calculate the Course End Date</inlineHelpText>
        <label>Course Start Date (End Calc)</label>
        <summarizedField>Calendar_Dates__c.Date_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Calendar_Dates__c.Calendar_Date_Unique_Key__c</field>
            <operation>contains</operation>
            <value>CRS-END</value>
        </summaryFilterItems>
        <summaryForeignKey>Calendar_Dates__c.CalendarId__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <description>Course Start Date retrieved from CRS-START</description>
        <inlineHelpText>Course Start Date retrieved from CRS-START</inlineHelpText>
        <label>Course Start Date</label>
        <summarizedField>Calendar_Dates__c.Date_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Calendar_Dates__c.Calendar_Date_Unique_Key__c</field>
            <operation>contains</operation>
            <value>CRS-START</value>
        </summaryFilterItems>
        <summaryForeignKey>Calendar_Dates__c.CalendarId__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Calendar Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Domestic_Scholarship_Round__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR flag to disable domestic scholarship rounds</description>
        <inlineHelpText>Disable the scholarship round for HDR Domestic application in My.App</inlineHelpText>
        <label>Disable Domestic Scholarship Round</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_International_Scholarship_Round__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR flag to disable international scholarship rounds</description>
        <inlineHelpText>Disable the scholarship round for HDR International application in My.App</inlineHelpText>
        <label>Disable International Scholarship Round</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domes_schol_round_publish_in_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Domestic scholarship round publish in progress</description>
        <label>Domes schol round publish in progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inter_schol_round_publish_in_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>International scholarship round publish in progress</description>
        <label>Inter schol round publish in progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published_Date_for_Domes_ScholarRound__c</fullName>
        <description>Published Date for Domestic Scholarship Round</description>
        <label>Published Date for Domes ScholarRound</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Published_Date_for_Inter_ScholarRound__c</fullName>
        <description>Published Date for International Scholarship Round</description>
        <label>Published Date for Inter ScholarRound</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence_Number_Year__c</fullName>
        <label>Sequence Number Year</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PLANNED</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Alt__c</fullName>
        <label>Calendar Type Alternate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Description__c</fullName>
        <label>Calendar Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Calendar Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Calendar Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Name_Alternate__c</columns>
        <columns>Calendar_Code__c</columns>
        <columns>Sequence_Number_Year__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Year__c</columns>
        <columns>Type_Alt__c</columns>
        <columns>Type_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Admission</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Code__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Year__c</columns>
        <columns>Type_Alt__c</columns>
        <columns>Type_Description__c</columns>
        <columns>Calendar_Name_Alternate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>ADMISSION</value>
        </filters>
        <label>All Admission</label>
    </listViews>
    <listViews>
        <fullName>All_Graduation</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Year__c</columns>
        <columns>Type_Alt__c</columns>
        <columns>Type_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>GRADUATION</value>
        </filters>
        <label>All Graduation</label>
    </listViews>
    <listViews>
        <fullName>All_Teaching</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Code__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Year__c</columns>
        <columns>Type_Alt__c</columns>
        <columns>Type_Description__c</columns>
        <columns>Calendar_Name_Alternate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>TEACHING</value>
        </filters>
        <label>All Teaching</label>
    </listViews>
    <listViews>
        <fullName>Teaching_2024</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Code__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Year__c</columns>
        <columns>Type_Alt__c</columns>
        <columns>Type_Description__c</columns>
        <columns>Calendar_Name_Alternate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>TEACHING</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2024</value>
        </filters>
        <label>Teaching 2024</label>
    </listViews>
    <nameField>
        <label>Calendar</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>